@@ -1,5 +1,11 @@
 Note: this file lists major user-visible changes only.
 
+* Changes in Quagga []
+
+- [zebra] "no link-detect" is no longer the default.  To retain current
+    behavior save your config before updating, else remove it from
+    you config prior to update.
+
 * Changes in Quagga 0.99.24
 
 User-visible changes:
